--- a/.github/workflows/lib_trigger.yml
+++ b/.github/workflows/lib_trigger.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'true'
-          token: ${{ secrets.ADMIN }}
+          token: ${{ secrets.TEST }}
       - name: Build Web App
         run: |  
           curl \
