--- a/.github/workflows/lib_trigger.yml
+++ b/.github/workflows/lib_trigger.yml
@@ -21,6 +21,16 @@ jobs:
           https://api.github.com/repos/theionSami/demo_lib_trigger_workflow/actions/lib_trigger.yml/dispatches  \
           -d '{"ref":"ref"}'
       - name: Build Web App
+        run: |  
+          curl \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/orgs/theion-batteries/actions/permissions
+      - name: Build Web App
+        run: |  
+          curl \
+          -H "Accept: application/vnd.github.v3+json" \
+          https://api.github.com/repos/theionSami/demo_lib_trigger_workflow/actions/permissions              
+      - name: Build Web App
         run: |
           curl \
           -H "Accept: application/vnd.github.v3+json" \
