--- a/.github/workflows/workflow_trigger_lib.yml
+++ b/.github/workflows/workflow_trigger_lib.yml
@@ -18,4 +18,5 @@ jobs:
           curl -i -H "Authorization: token ${{ secrets.TEST }}" \
           -X POST \
           -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/theionSami/demo_lib_trigger_workflow/actions/workflows/16815165/dispatches 
+          https://api.github.com/repos/theionSami/demo_lib_trigger_workflow/actions/workflows/16815165/dispatches \
+          -d '{"ref":"main"}'
